manifest/objects/ALTF__Assessment_Competitor_Answer__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing answers to the Assessment module specific to a given opportunity competitor.</description>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Answer__c</fullName>
        <label>Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Answer__c</fullName>
        <label>Assessment Answer</label>
        <referenceTo>ALTF__Assessment_Answer__c</referenceTo>
        <relationshipName>DM_TAS_Criterion_Competitor_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Competitor__c</fullName>
        <label>Opportunity Competitor</label>
        <referenceTo>ALTF__Opportunity_Competitor__c</referenceTo>
        <relationshipName>DM_TAS_Criterion_Competitor_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Altify Assessment Competitor Answer</label>
    <nameField>
        <label>Assessment Criterion Competitor Answer N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Assessment Competitor Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>